[package]
name = "tilt_rs_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tilt_rs_py"
crate-type = ["cdylib"]

[dependencies]
pseudo_tilt = { git = "https://gitlab.com/pseudowalls/tilt.rs.git", version = "0.2.0" }
pyo3 = "0.18.3"
