[package]
name = "pseudo_tilt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pseudo_tilt"
crate-type = ["cdylib"]

[dependencies]
pseudo_tilt = { git = "https://gitlab.com/pseudowalls/tilt.rs.git", tag = "v0.5.0" }
pyo3 = { version = "0.20.2", features = ["extension-module"] }
